<resources>
    <string name="app_name">TimeMaster</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="generation">辈</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="week">周</string>
    <string name="date">日</string>
    <string name="list">列表</string>
    <string name="new_item">新建</string>
    <string name="a00">农历\n阳历</string>
    <string name="a01">换算\n栏</string>
    <string name="a03">滚轮\n区</string>
    <string name="a04">确认\n</string>
    <string name="a10">世界时间</string>
    <string name="a11">阳历\n</string>
    <string name="a20">北京\n</string>
    <string name="a21">首尔\n</string>
    <string name="a22">东京\n</string>
    <string name="a23">墨尔\n本</string>
    <string name="a24">农历\n</string>
    <string name="a30">夏威\n夷</string>
    <string name="a31">旧金\n山</string>
    <string name="a32">纽约\n</string>
    <string name="a33">温哥\n华</string>
    <string name="a34">倒计\n</string>
    <string name="a40">伦敦\n</string>
    <string name="a41">巴黎\n</string>
    <string name="a42">罗马\n</string>
    <string name="a43">莫斯\n科</string>
    <string name="a44">延续\n</string>
    <string name="a50">开罗\n</string>
    <string name="a51">马德\n里</string>
    <string name="a52">新加\n坡</string>
    <string name="a53">香港\n</string>
    <string name="a54">提前\n</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="D">D</string>
    <string name="E">E</string>
    <string name="F">F</string>
    <string name="G">G</string>
    <string name="H">H</string>
    <string name="I">I</string>
    <string name="J">J</string>
    <string name="K">K</string>
    <string name="L">L</string>
    <string name="M">M</string>
    <string name="N">N</string>
    <string name="O">O</string>
    <string name="P">P</string>
    <string name="Q">Q</string>
    <string name="R">R</string>
    <string name="S">S</string>
    <string name="T">T</string>
    <string name="U">U</string>
    <string name="V">V</string>
    <string name="W">W</string>
    <string name="X">X</string>
    <string name="Y">Y</string>
    <string name="Z">Z</string>
    <string name="cancel">取消</string>
    <string name="action_settings">Settings</string>
    <string name="page_title">卓越人生管理系统</string>
    <string name="page1_sysprompt">系统提示</string>
    <string name="page1_content">前言：
	    卓越的人生源于规划，写下您的梦想、理想和思想，指定为之奋斗的战略部署，记录您为之付出的点点滴滴，分析、调整、成长，目标随之 越来越近，目标也许越来越宏伟。当您回首，往事历历在目，泪水与欢颜是您成长的力量； 当您展望，未来美好而 清晰，激情和创意是您飞翔的翅膀。
	    一切从此刻开始！</string>
    <string name="page1_hintname">请输入您的用户名</string>
    <string name="page1_hintpw">请输入您的密码</string>
    <string name="page1_setbtn">设置</string>
    <string name="page1_loginbtn">登录</string>
    <string name="page1_end">信息推送</string>
    <string name="page2_one">记住用户名</string>
    <string name="page2_two">记住密码</string>
    <string name="page2_three">自动登陆</string>
    <string name="page2_four">忘记密码</string>
    <string name="page2_five">启用魔术键盘</string>
    <string name="page2_seebtn">浏览</string>
    <string name="page2_registbtn">注册</string>
    <string name="page3_title0">找回密码</string>
    <string name="page3_tv1">提出问题</string>
    <string name="page3_hint1">注册问题</string>
    <string name="page3_hint2">输入答案</string>
    <string name="page3_tv2">选择找回方式</string>
    <string name="page3_cb1">手机短信</string>
    <string name="page3_cb2">邮件</string>
    <string name="page3_hint3">显示手机号码，或者邮箱地址</string>
    <string name="page3_btn">确认发送</string>
    <string name="page4_title">系统协议</string>
    <string name="page4_content">1、系统简介（详情）
           本系统采用实名制，意在打一个诚信的互联网世界，并会对用户进行诚信的评价。本系统采用以身份证与手机号捆绑的注册方式，用户必须使用本人的身份证和本人的手机进行注册，注册验证码通过手机短信验证。一个身份证和一个手机号只能注册一个主用户，和八个辅助用户（需监管的未成年人，老年人和不能自我管理的人）。辅助用户登录系统后只能使用被授权的功能，主用户可以管理辅助用户的资料，未成年人只成年后其辅助用户可以升级到主用户。
	系统只提取用户最基本的信息和用户授权信息，用于管理用户和为用户提供更好的服务。所有用户资料本系统均不会为第三方提供，法律法规的要求除外。系统只对用户群做统计学分析，而不会透露具体的个人信息用于商业用途。但基于技术限制和互联网的特点，系统不能完全防范黑客攻击和恶意程序导致的信息泄露和破坏，因此需特别保密的信息请不要记录在本系统内，需特别保存的信息请另做备份。
2、关于隐私（详情）
3、免责声明（详情）
4、法律法规（详情）</string>
    <string name="title_activity_repeat_dialog_fragment2">RepeatDialogFragment2</string>
    <string name="title_activity_repeat_dialog_fragment1">RepeatDialogFragment1</string>
 	<string name="page4_disagreecb">不接受，退出注册</string>
 	<string name="page4_agreecb">同意并理解所以条款</string>
 	<string name="page5_title">注册信息</string>
	<string name="page5_idcard">身份证</string>
	<string name="page5_truename">真实姓名</string>
	<string name="page5_username">用户名</string>
	<string name="page5_birthday">出生日期</string>
	<string name="page5_nativeplace">籍贯</string>
	<string name="page5_email">电子邮箱</string>
	<string name="page5_phone">手机号</string>
	<string name="page5_code">人机识别码</string>
	<string name="page5_getcode">获取手机验证码</string>
	<string name="page5_hintid">身份证号码</string>
	<string name="page5_hintfirst">姓</string>
	<string name="page5_hintend">名</string>
	<string name="page6_title">恭喜你，完成注册，成为卓越人生的追求者！</string>
	<string name="page6_pwset">密码设置</string>
	<string name="page6_pwinput">密码输入</string>
	<string name="page6_hintpwin">请输入密码</string>
	<string name="page6_pwremind">密码设置提醒：设置成功！复杂程度高！</string>
	<string name="page6_findpw">找回密码方式</string>
	<string name="page6_hintphone">手机短信</string>
	<string name="page6_hintemail">邮件</string>
	<string name="page6_question">提问问题</string>
	<string name="page6_hintintqes">输入问题</string>
	<string name="page6_hintintans">输入答案</string>
	<string name="page6_end">继续完善个人信息</string>
	<string name="page7_title">继续完善个人信息</string>
	<string name="page7_name">昵称</string>
	<string name="page7_gender">性别</string>
	<string name="page7_address">家庭住址</string>
	<string name="page7_getaddress">邮寄住址</string>
	<string name="page7_phone">添加通讯方式</string>
	<string name="page7_qqnumber">QQ号</string>
	<string name="page7_microblog">微博</string>
	<string name="page7_message">微信</string>
	<string name="page7_end">完善个人家庭信息</string>
	<string name="page8_title">完善家庭信息</string>
	<string name="page8_id">户口编号</string>
	<string name="page8_dadid">父亲身份证号</string>
	<string name="page8_momid">母亲身份证号</string>
	<string name="page8_familyrole">家庭角色</string>
	<string name="page8_marryid">结婚证号</string>
	<string name="page8_husband">丈夫身份证号</string>
	<string name="page8_wife">妻子身份证号</string>
	<string name="page8_end">完善单位信息</string>
	<string name="page9_title">完善单位信息</string>
	<string name="page9_name">单位名称</string>
	<string name="page9_address">单位地址</string>
	<string name="page9_quale">单位性质</string>
	<string name="page9_idcode">营业执照代码</string>
	<string name="page9_idnumber">税务登记代码</string>
	<string name="page9_goods">主营产品</string>
	<string name="page9_class">部门科室</string>
	<string name="page9_role">职务角色</string>
	<string name="page9_end">进入主页</string>
	<string name="date_layout_plan_model_1">日期\n倒计</string>
	<string name="date_plan_time_period_1">占用\n期间</string>
	<string name="date_layout_plan_model_2">倒计\n日期</string>
	<string name="date_plan_time_period_2">期间\n占用</string>
	<string name="date_solar_lunar_1">阳历\n农历</string>
	<string name="date_solar_lunar_2">农历\n阳历</string>
	<string name="date_center_first">确认</string>
	<string name="date_center_forth">总次数</string>
	<string name="date_top_center_lunar_1">阳历/农历\n结束日期</string>
	<string name="date_top_center_lunar_2">农历/阳历\n结束日期</string>
	<string name="date_top_left_lunar1">每日1次\n间隔1：00</string>
	<string name="date_top_left_lunar2">每日2次\n间隔3：30</string>
	<string name="date_top_centerone_lunar1">重复1天\n至2003/3/14</string>
	<string name="date_top_centerone_lunar2">重复19天\n至2013/11/08</string>
	<string name="date_center_second">阳历/农历\n结束日期</string>
	<string name="date_confirm">确认</string>
	<string name="date_month_select">月选\n日</string>
	<string name="date_year_select">年选\n日</string>
	<string name="date_month_current">月本\n日</string>
	<string name="date_year_current">年本\n日</string>
	<string name="date_working">工作\n日</string>
	<string name="date_everyday">每日</string>
	<string name="date_lunar_month_select">农月\n选日</string>
	<string name="date_lunar_year_select">农年\n选日</string>
	<string name="date_lunar_month_current">农月\n本日</string>
	<string name="date_lunar_year_current">农年\n本日</string>
	<string name="date_festival">节假\n日</string>
	<string name="date_quaque">隔日</string>
	<string name="date_commemorate_day">纪念\n日</string>
	<string name="date_other_week">隔周</string>
	<string name="date_day_off">休息日</string>
	<string name="date_plan_yourself">自排：做X，停X；</string>
	<string name="date_monday">周一</string>
	<string name="date_tuesday">周二</string>
	<string name="date_wednesday">周三</string>
	<string name="date_thursday">周四</string>
	<string name="date_friday">周五</string>
	<string name="date_saturday">周六</string>
	<string name="date_sunday">周日</string>
	<string name="do_do">做</string>
	<string name="date_yes">确认</string>
	<string name="do_ge">隔</string>
	<string name="do_del">删除</string>
	<string name="do_next">下一个</string>
	<string name="do_num0">0</string>
	<string name="do_num1">1</string>
	<string name="do_num2">2</string>
	<string name="do_num3">3</string>
	<string name="do_num4">4</string>
	<string name="do_num5">5</string>
	<string name="do_num6">6</string>
	<string name="do_num7">7</string>
	<string name="do_num8">8</string>
	<string name="do_num9">9</string>
	<string name="warning_everytime">每次</string>
	<string name="warning_advanced">提前1：30</string>
	<string name="warning_add">添加</string>
	<string name="warning_compose">组合</string>
	<string name="warning_way">提醒方式</string>
	<string name="warning_confirm">确定</string>
	<string name="warning_library">库</string>
	<string name="warning_collect">收藏</string>
	<string name="warning_music">音乐</string>
	<string name="warning_download">下载</string>
	<string name="warning_pronunciation">语音</string>
	<string name="warning_audition">试听</string>
	<string name="warning_vibrate">振动</string>
	<string name="warning_transcribe">录制</string>
	<string name="warning_icon">图标</string>
	<string name="warning_motion">动作</string>
	<string name="warning_surroundings">环境</string>
	<string name="warning_procedure">流程</string>
	<string name="warning_man_sound">男声</string>
	<string name="warning_female_sound">女声</string>
	<string name="warning_child_sound">童声</string>
	<string name="warning_ring">铃声</string>
	<string name="warning_ring_one">铃声一</string>
	<string name="warning_ring_two">铃声二</string>
	<string name="warning_ring_three">铃声三</string>
	<string name="warning_ring_four">铃声四</string>
	<string name="warning_ring_five">铃声五</string>
	<string name="warning_ring_six">铃声六</string>
	<string name="warning_ring_seven">铃声七</string>
	<string name="warning_ring_eight">铃声八</string>
	<string name="warning_music_one">音乐1</string>
	<string name="warning_music_two">音乐2</string>
	<string name="warning_music_three">音乐3</string>
	<string name="warning_music_four">音乐4</string>
	<string name="warning_music_five">音乐5</string>
	<string name="warning_music_six">音乐6</string>
	<string name="warning_music_seven">音乐7</string>
	<string name="warning_music_eight">音乐8</string>
	<string name="warning_pronunciation_time">语音报时</string>
	<string name="warning_pronunciation_plan">语音报计划标题</string>
	<string name="warning_pronunciation_record">语音报录音</string>
	<string name="warning_pronunciation_getup">该起床了</string>
	<string name="warning_pronunciation_dine">该吃饭了</string>
	<string name="warning_pronunciation_work">该上班了</string>
	<string name="warning_pronunciation_pills">该吃药了</string>
	<string name="warning_pronunciation_rest">该休息了</string>
	<string name="day_warning_plan_change_inform">计划变化通知相关方</string>
	<string name="day_warning_plan_cancel">计划取消</string>
	<string name="day_warning_plan_start">按计划开始</string>
	<string name="day_warning_plan_shelve">计划搁置</string>
	<string name="day_warning_now_start">现在开始</string>
	<string name="day_warning_reset_warn">重设提醒</string>
	<string name="day_warning_minutes_warn">5分钟后再提醒</string>
	<string name="day_warning_not_warn">不再提醒</string>
	<string name="day_warning_known">已知</string>
</resources>