<?xml version="1.0" encoding="utf-8"?>
<com.time.master.view.BasicViewGroup xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:layout="http://schemas.android.com/apk/res/com.time.master"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:id="@+id/day_warning_viewgroup"
    android:background="#CCCCCC">

    <com.time.master.view.BasicTextView
        android:id="@+id/day_warning_inform"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#99CCFF"
        android:gravity="center"
        android:text="@string/day_warning_plan_change_inform"
        android:textColor="#000000"
        layout:new_line="true"
        layout:width_multi="5" />
 <!-- ////////////////////////////////////////////////////////////// -->
    <com.time.master.view.BasicTextView
        android:id="@+id/day_warning_plan_cencel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#99CCFF"
        android:gravity="center"
        android:text="@string/day_warning_plan_cancel"
        android:textColor="#000000"
        layout:new_line="true"
        layout:width_multi="3" />

    <com.time.master.view.BasicTextView
        android:id="@+id/day_warning_plan_shelve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#99CCFF"
        android:gravity="center"
        android:textColor="#000000"
        android:text="@string/day_warning_plan_shelve"
        layout:new_line="false"
        layout:width_multi="2" />
    <!-- ////////////////////////////////////////////////////////////// -->

    <com.time.master.view.BasicTextView
        android:id="@+id/day_warning_plan_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#000000"
        android:text="@string/day_warning_plan_start"
        android:background="#99CCFF"
        layout:new_line="true"
        layout:width_multi="3" />

    <com.time.master.view.BasicTextView
        android:id="@+id/day_warning_now_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#000000"
        android:text="@string/day_warning_now_start"
        android:background="#99CCFF"
        layout:new_line="false"
        layout:width_multi="2" />
<!-- ////////////////////////////////////////////////////////////// -->
    <com.time.master.view.BasicTextView
        android:id="@+id/day_warning_reset_warn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#000000"
        android:text="@string/day_warning_reset_warn"
        android:background="#99CCFF"
        layout:new_line="true"
        layout:width_multi="3" />

    <com.time.master.view.BasicTextView
        android:id="@+id/day_warning_known"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textColor="#000000"
        android:text="@string/day_warning_known"
        android:background="#FFFF00"
        layout:new_line="false"
        layout:width_multi="2" />
 <!-- ////////////////////////////////////////////////////////////// -->
    <com.time.master.view.BasicTextView
        android:id="@+id/day_warning_minutes_warn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#000000"
        android:text="@string/day_warning_minutes_warn"
        android:background="#FFFF00"
        layout:new_line="true"
        layout:width_multi="3" />
<!-- ////////////////////////////////////////////////////////////// -->
    <com.time.master.view.BasicTextView
        android:id="@+id/day_warning_not_warn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#000000"
        android:text="@string/day_warning_not_warn"
        android:background="#99CCFF"
        layout:new_line="true"
        layout:width_multi="3" />

</com.time.master.view.BasicViewGroup>